add full flow ingreso, works correctly methods get, put, post and delete of ingreso

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.purple-white {
+  background-color: #3c3365; 
+  color: white
+}
+
+.card-custom {
+  width: 35rem
+}
